--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
+    "lint": "eslint .",
     "test": "jest --verbose"
   },
   "repository": {
@@ -19,6 +20,7 @@
   },
   "homepage": "https://github.com/cabbachew/bloglist#readme",
   "devDependencies": {
+    "eslint": "^8.35.0",
     "jest": "^29.4.3",
     "nodemon": "^2.0.20"
   },
