fix failing tests by configuring jest testTimeout and awaiting db connection in beforeAll hook

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "jest": {
     "testEnvironment": "node",
-    "globalTeardown": "./tests/teardown.js"
+    "globalTeardown": "./tests/teardown.js",
+    "testTimeout": 30000
   }
 }
