--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "lodash": "^4.17.21",
-    "mongoose": "^6.10.0"
+    "mongoose": "^6.10.0",
+    "mongoose-unique-validator": "^3.1.0"
   },
   "jest": {
     "testEnvironment": "node",
