--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   "homepage": "https://github.com/cabbachew/bloglist#readme",
   "devDependencies": {
     "eslint": "^8.35.0",
+    "eslint-config-prettier": "^8.8.0",
     "jest": "^29.4.3",
     "nodemon": "^2.0.20",
+    "prettier": "2.8.6",
     "supertest": "^6.3.3"
   },
   "dependencies": {
